--- a/style/_input.scss
+++ b/style/_input.scss
@@ -3,6 +3,19 @@
     position: relative;
     > input {
         margin-block: $margin-start $margin-end;
+        @extend .input;
+        :focus{
+            outline: none;
+        }
+        }
+        > img {
+            position: absolute;
+            top : $img-top;
+            left : $img-left;
+        }
+}
+
+.input{
         padding : 10px;
         font-size: 16px;
         width : 300px;
@@ -16,18 +29,4 @@
         color: $btn-color ;
         font-size: 18px;
 
-        :focus{
-            outline: none;
-        }
-
-        }
-    
-
-        > img {
-            position: absolute;
-            top : $img-top;
-            left : $img-left;
-        }
-
 }
-
