--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,18 @@
+.input, .peopleWrapper > input, .inputContainer > input {
+  padding: 10px;
+  font-size: 16px;
+  width: 300px;
+  border: none;
+  border-radius: 5px;
+  background-color: hsl(189deg, 41%, 97%);
+  text-align: right;
+  cursor: pointer;
+  font-family: "Space Mono", sans-serif;
+  font-weight: 700;
+  color: hsl(183deg, 100%, 15%);
+  font-size: 18px;
+}
+
 body {
   background-color: hsl(185deg, 41%, 84%);
 }
@@ -22,18 +37,6 @@ body {
 }
 .inputContainer > input {
   margin-block: 0px 40px;
-  padding: 10px;
-  font-size: 16px;
-  width: 300px;
-  border: none;
-  border-radius: 5px;
-  background-color: hsl(189deg, 41%, 97%);
-  text-align: right;
-  cursor: pointer;
-  font-family: "Space Mono", sans-serif;
-  font-weight: 700;
-  color: hsl(183deg, 100%, 15%);
-  font-size: 18px;
 }
 .inputContainer > input :focus {
   outline: none;
@@ -78,18 +81,6 @@ body {
 }
 .peopleWrapper > input {
   margin-block: 10px 40px;
-  padding: 10px;
-  font-size: 16px;
-  width: 300px;
-  border: none;
-  border-radius: 5px;
-  background-color: hsl(189deg, 41%, 97%);
-  text-align: right;
-  cursor: pointer;
-  font-family: "Space Mono", sans-serif;
-  font-weight: 700;
-  color: hsl(183deg, 100%, 15%);
-  font-size: 18px;
 }
 .peopleWrapper > input :focus {
   outline: none;
