make font family common

--- a/style/_input.scss
+++ b/style/_input.scss
@@ -24,7 +24,7 @@
         background-color : $input-bg-color;
         text-align: right;
         cursor: pointer;
-        font-family: 'Space Mono',sans-serif;
+        font-family: $font-family;
         font-weight: $font-weight;
         color: $btn-color ;
         font-size: 18px;
