--- a/style/style.scss
+++ b/style/style.scss
@@ -5,7 +5,6 @@ $font-weight: 700;
 $font-family: 'Space Mono',sans-serif;
 
 @import 'input';
-@import 'media';
 
 body {
     background-color:  $bg-color ;
@@ -31,41 +30,11 @@ body {
     @include primary-input(0px,40px,15px,15px);
 }
 
-.btnContainer  {
-    display : grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-gap : 15px;
-    margin-bottom: 40px;
-
-    > input {
-        border : none;
-        padding : 10px;
-        background-color: $input-bg-color;
-        border-radius: 5px;
-    }
-
-    > button {
-        padding : 10px;
-        border: none;
-        border-radius: 5px;
-        background-color : $btn-color ;
-        color : #fff;
-        font-size: 20px;
-        font-family: $font-family;
-        font-weight: $font-weight;
-        cursor: pointer;
-
-        :active{
-            background-color: $bg-color ;
-            color : $btn-color ;
-        }
-    }
-    
-}
+@import 'tip-amount-selction';
 
 .peopleWrapper {
     @include primary-input(10px,40px,20px,20px);
 }
 
 @import 'amount-preview';
+@import 'media';
